replaced single cout with ERROR

--- a/templates/a_muon.cpp.in
+++ b/templates/a_muon.cpp.in
@@ -34,6 +34,7 @@
 #include "lowe.h"
 #include "wrappers.hpp"
 #include "numerics2.hpp"
+#include "src/logger.hpp"
 
 using namespace flexiblesusy;
 using namespace @ModelName@_cxx_diagrams;
@@ -100,7 +101,7 @@ double calculate_a_muon_impl(const @ModelName@_mass_eigenstates& model, const so
 @AMuon_Calculation@
 
    if (!is_zero((form_factors[2] + form_factors[3]).imag())) {
-      std::cout << "Error in the g-2 calculation! Form factor F2 should be real\n";
+      ERROR("Error in the g-2 calculation! Form factor F2 should be real");
       return std::numeric_limits<double>::quiet_NaN();
    }
 
