renamed model to FlavorAligned2HDM
as suggested by Dominik

--- a/model_files/FlavorAligned2HDM/FlexibleSUSY.m.in
+++ b/model_files/FlavorAligned2HDM/FlexibleSUSY.m.in
@@ -2,7 +2,7 @@
 
 FSModelName = "@CLASSNAME@";
 FSEigenstates = SARAH`EWSB;
-FSDefaultSARAHModel = "THDM-MW";
+FSDefaultSARAHModel = "FlavorAligned2HDM";
 
 OnlyLowEnergyFlexibleSUSY = True;
 
