--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -75,3 +75,9 @@ jobs:
         run: docker exec builder bash -c "cd FlexibleSUSY && VERBOSE=1 make"
       - name: Make and run tests
         run: docker exec builder bash -c 'cd FlexibleSUSY && make -j2 all-test'
+
+      - uses: actions/upload-artifact@v1
+        if: failure()
+        with:
+          name: test-logs
+          path: 'test/test_*.log'
