removed parallel limit from tests

--- a/.github/workflows/unit_tests.yaml
+++ b/.github/workflows/unit_tests.yaml
@@ -21,13 +21,16 @@ on:
       - 'doc/**'
 
 jobs:
+
   build:
+
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         CXXCOMPILER: [g++, clang++]
         LOOPLIBRAY: [internal, looptools]
-      max-parallel: 2
+
     steps:
       # action checks-out our repository under $GITHUB_WORKSPACE
       - name: Checkout
@@ -57,7 +60,7 @@ jobs:
         env:
           CXX:  ${{ matrix.CXXCOMPILER }}
           CC:   ${{ matrix.CXXCOMPILER }}
-      - name: Install LoopTools
+      - name: (Optional) Install LoopTools
         run: |
           docker exec builder bash -c 'cd /tmp && wget -qO- http://www.feynarts.de/looptools/LoopTools-2.15.tar.gz | tar xzf -'
           docker exec builder bash -c "cd /tmp/LoopTools-2.15 && if [ "$CXX" = "g++" ]; then export CC=gcc; export CXX=g++; fi && FFLAGS=-fPIC CFLAGS=-fPIC CXXFLAGS=-fPIC ./configure --prefix=/LoopTools-2.15 && make install"
