temporarily disable clang tests
need to find a workaround for FormCalc installation with clang

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
 
     strategy:
       matrix:
-        CXXCOMPILER: [g++, clang++]
+        CXXCOMPILER: [g++]
         LOOPLIBRARY: [internal, looptools]
 
     env:
