--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       matrix:
         CXXCOMPILER: [g++]
-        LOOPLIBRARY: [internal, looptools]
+        LOOPLIBRARY: [internal]
 
     env:
       IMAGE_VERSION: '0.2.3'
