--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
 
     strategy:
       matrix:
-        CXXCOMPILER: [g++]
+        CXXCOMPILER: [g++, clang++]
         LOOPLIBRARY: [internal]
 
     env:
@@ -71,9 +71,6 @@ jobs:
           docker exec builder bash -c "wget -q -O - http://www.feynarts.de/formcalc/FormCalc-$FORMCALC_VERSION.tar.gz | tar xzf -"
           docker exec builder bash -c "cd FormCalc-$FORMCALC_VERSION && PATH=/usr/local/Wolfram/WolframEngine/12.0/Executables:\$PATH ./compile"
           docker exec builder bash -c "echo 'AppendTo[\$Path, \"/FormCalc-$FORMCALC_VERSION\"];' >> /root/.WolframEngine/Kernel/init.m"
-        env:
-          CXX:  ${{ matrix.CXXCOMPILER }}
-          CC:   ${{ matrix.CXXCOMPILER }}
 
       - name: (Optional) Install LoopTools
         run: |
