--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,21 +11,20 @@ on:
       - 'COPYING'
       - 'doc/**'
 
-# currently there's now way to share secrets with pull request
-# so tests on pull request always fail because of missing Wolfram Engine licence
-#  pull_request:
-#    branches:
-#      - development
-#    paths-ignore:
-#      - '*.rst'
-#      - 'AUTHORS'
-#      - 'COPYING'
-#      - 'doc/**'
+  pull_request:
+    branches:
+      - development
+    paths-ignore:
+      - '*.rst'
+      - 'AUTHORS'
+      - 'COPYING'
+      - 'doc/**'
 
 jobs:
 
   build:
 
+    if: github.repository == 'FlexibleSUSY/FlexibleSUSY'
     runs-on: ubuntu-18.04
 
     strategy:
