reinstate looptools tests in action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       matrix:
         CXXCOMPILER: [g++, clang++]
-        LOOPLIBRARY: [internal]
+        LOOPLIBRARY: [internal, looptools]
 
     env:
       IMAGE_VERSION: '0.2.4'
