updated to new upload-artifact version

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -102,8 +102,9 @@ jobs:
         run: docker exec builder bash -c 'cd FlexibleSUSY && VERBOSE=1 make -j2 all-test'
 
       - name: (Optional) Save logs in case of an error
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2-preview
         if: failure()
         with:
           name: ${{matrix.CXXCOMPILER}}-${{matrix.LOOPLIBRARY}}_test-logs
-          path: 'test'
+          path: test/test_*.log
+
