build in verbose mode to inspect detailed build commands on MacOS

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,6 @@ install:
   - conan install . --build=missing
 script:
   - ./configure --with-models= --with-optional-modules=test --with-addons=GM2Calc --disable-meta
-  - make
-  - make -k all-test
+  - make showbuild
+  - make VERBOSE=1
+  - make VERBOSE=1 -k all-test
