attempt to temporarily fix boost library linking problems on MacOS

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ compiler:
 addons:
   apt:
     packages:
+      - libboost-dev
       - libgsl0-dev
   homebrew:
     packages:
+      - boost
       - gsl
     update: true
 install:
