disable verbose output

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ script:
   - source activate_run.sh
   - ./configure --with-models= --with-optional-modules=test --with-addons=GM2Calc --disable-meta
   - make showbuild
-  - make VERBOSE=1
-  - make VERBOSE=1 -k all-test
+  - make
+  - make -k all-test
   - test/test_threshold_loop_functions.x
