reduce number of parallel runs in github action

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,6 +35,7 @@ jobs:
       matrix:
         CXXCOMPILER: [g++, clang++]
         LOOPLIBRARY: [internal, looptools]
+      max-parallel: 1
 
     env:
       IMAGE_VERSION: '0.2.4'
